rendered/envs/friclu/home-assistant/ingress-home-assistant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2025.5.3
    helm.sh/chart: home-assistant-0.3.4
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: home.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - home.duchardt.net
      secretName: ha-certificate
